base/src/test/resources/failure/operator/ambiguous.aya.txt
In file $FILE:4:14 ->

  2 | def infix = => Type 0
  3 | 
  4 | def fail => 1 + 1 = 2
                    ^^

Error: Ambiguous operator precedence detected between `=` and `+`
note: Use `bind` statement or insert parentheses to make it clear.

1 error(s), 0 warning(s).
What are you doing?
